--- a/examples.html
+++ b/examples.html
@@ -24,11 +24,16 @@
         </nav>
     </header>
     <main>
-        <section id="hero">
-            <h1>Web Intro</h1>
-        </section>
-        <section>
-            Long before time had a name, the First Spinjitzu Master created Ninjago using four elemental weapons. But when he passed, a dark presence sought out to collect them all: Lord Garmadon. So I, Sensei Wu, his brother, sought out to find four ninja to collect them first.
+        <section class="demo" id="task1">
+            <h2>Basic FlexBox</h2>
+            <div>
+                <p>A</p>
+                <p>B</p>
+                <p>C</p>
+                <p>D</p>
+                <p>E</p>
+                <p>F</p>
+            </div>
         </section>
     </main>
     <footer>
